--- a/public/maps.html
+++ b/public/maps.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>BankMaps • Map (Tract Choropleth)</title>
+<title>BankMaps • Tract Choropleth</title>
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
@@ -26,8 +26,7 @@
   <label>Year</label>
   <select id="year">
     <option value="2024" selected>2024</option>
-    <option value="2023">2023</option>
-    <option value="2022">2022</option>
+    <!-- add more years as you publish tilesets -->
   </select>
 
   <label>Lender</label>
@@ -40,13 +39,12 @@ let map;
 let counts = new Map();
 let currentYear = "2024";
 
-// Background style
+// Your custom background style
 const MAP_STYLE = 'mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk';
 
-// Define yearly tilesets here
+// Year → tileset mapping (add more entries as you create tilesets)
 const TILESETS = {
   "2024": { id: 'tracts2024', url: 'mapbox://stuartmaps.58y5r823', layer: '2024-1pvgy8' }
-  // Add more later: "2023": { id:'tracts2023', url:'mapbox://stuartmaps.xyz', layer:'2023-abcd1' }
 };
 
 function colorRampExpr() {
@@ -65,10 +63,7 @@ function colorRampExpr() {
 async function init(){
   const status = document.getElementById('status');
   const { token } = await fetch('/api/mapbox-token').then(r=>r.json()).catch(()=>({token:''}));
-  if(!token || !token.startsWith('pk.')) {
-    status.textContent='Mapbox token missing or invalid.';
-    return;
-  }
+  if(!token || !token.startsWith('pk.')) { status.textContent='Mapbox token missing or invalid.'; return; }
 
   mapboxgl.accessToken = token;
   map = new mapboxgl.Map({
@@ -80,22 +75,13 @@ async function init(){
   map.addControl(new mapboxgl.NavigationControl(),'top-right');
   await new Promise(res => map.once('load', res));
 
-  // Brightness slider
+  // Background brightness slider
   const slider = document.createElement('input');
-  slider.type = 'range';
-  slider.min = 0;
-  slider.max = 1;
-  slider.step = 0.05;
-  slider.value = 0.8;
-  slider.style.position = 'fixed';
-  slider.style.top = '16px';
-  slider.style.right = '16px';
-  slider.style.zIndex = '10';
+  slider.type = 'range'; slider.min = 0; slider.max = 1; slider.step = 0.05; slider.value = 0.8;
+  slider.style.position = 'fixed'; slider.style.top = '16px'; slider.style.right = '16px'; slider.style.zIndex = '10';
   slider.title = 'Background brightness';
   document.body.appendChild(slider);
-  slider.oninput = e => {
-    map.setPaintProperty('background', 'background-opacity', parseFloat(e.target.value));
-  };
+  slider.oninput = e => map.setPaintProperty('background', 'background-opacity', parseFloat(e.target.value));
 
   document.getElementById('year').addEventListener('change', async e => {
     currentYear = e.target.value;
@@ -116,6 +102,7 @@ async function updateTileset(){
   const t = TILESETS[currentYear];
   if(!t){ alert(`No tileset defined for year ${currentYear}`); return; }
 
+  // remove any existing tileset layers/sources
   for (const yr in TILESETS){
     const l = TILESETS[yr];
     if(map.getLayer(l.id+'-fill')) map.removeLayer(l.id+'-fill');
@@ -123,7 +110,9 @@ async function updateTileset(){
     if(map.getSource(l.id)) map.removeSource(l.id);
   }
 
-  map.addSource(t.id, { type:'vector', url:t.url });
+  // add current year's tileset; promoteId ensures GEOID is the feature id
+  map.addSource(t.id, { type:'vector', url:t.url, promoteId:'GEOID' });
+
   map.addLayer({
     id: t.id+'-fill',
     type: 'fill',
@@ -136,7 +125,7 @@ async function updateTileset(){
     type: 'line',
     source: t.id,
     'source-layer': t.layer,
-    paint:{'line-color':'#ffffff','line-width':0.3,'line-opacity':0.6}
+    paint:{ 'line-color':'#ffffff','line-width':0.3,'line-opacity':0.6 }
   });
 }
 
@@ -150,9 +139,13 @@ async function loadCounts(){
   const res = await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=${currentYear}`);
   if(!res.ok){ status.textContent = 'Error: '+(await res.text()); return; }
   const data = await res.json();
-  counts = new Map((data.rows||[]).map(r => [String(r.geoid || r.GEOID), r.count]));
+
+  // API returns rows like { GEOID, count }
+  counts = new Map((data.rows||[]).map(r => [String(r.GEOID), r.count]));
+
   status.textContent = `Loaded ${counts.size} tracts. Coloring…`;
 
+  // apply counts via feature-state (id = GEOID because of promoteId)
   for (const [geoid, value] of counts.entries()) {
     map.setFeatureState(
       { source: t.id, sourceLayer: t.layer, id: geoid },
