--- a/public/maps.html
+++ b/public/maps.html
@@ -24,9 +24,7 @@
 
 <aside>
   <label>Year</label>
-  <select id="year">
-    <option value="2024" selected>2024</option>
-  </select>
+  <select id="year"><option value="2024" selected>2024</option></select>
 
   <label>Lender</label>
   <select id="lender"></select>
@@ -38,15 +36,12 @@ let map;
 let prevIds = new Set();
 let currentYear = "2024";
 
-// Neutral basemap (stable)
-const MAP_STYLE = 'mapbox://styles/mapbox/light-v11';
-
-// Your tileset config
+const MAP_STYLE = 'mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk';
 const TILESETS = {
   "2024": { id: 'tracts2024', url: 'mapbox://stuartmaps.58y5r823', layer: '2024-1pvgy8' }
 };
 
-// Choropleth paint (only tracts with counts are visible/opaque)
+// Coloring function
 function choroplethPaint(){
   return {
     'fill-color': [
@@ -63,168 +58,112 @@ function choroplethPaint(){
       ],
       'rgba(0,0,0,0)'
     ],
-    'fill-opacity': [
-      'case',
-      ['has', 'value', ['feature-state']], 0.9, 0
-    ]
+    'fill-opacity': ['case', ['has', 'value', ['feature-state']], 0.85, 0]
   };
 }
 
-// Wait until a vector source is fully ready
-function waitForTiles(sourceId){
-  return new Promise((resolve) => {
-    if (map.isSourceLoaded(sourceId)) return resolve();
-    const onData = (e) => {
-      if (e.sourceId === sourceId && map.isSourceLoaded(sourceId)) {
-        map.off('sourcedata', onData);
-        resolve();
-      }
-    };
-    map.on('sourcedata', onData);
+async function waitForTiles(sourceId){
+  return new Promise(resolve=>{
+    if(map.isSourceLoaded(sourceId)) return resolve();
+    const check=()=>{ if(map.isSourceLoaded(sourceId)){ map.off('sourcedata',check); resolve(); }};
+    map.on('sourcedata',check);
   });
 }
 
 async function init(){
-  const status = document.getElementById('status');
-
-  // Token
+  const status=document.getElementById('status');
   const { token } = await fetch('/api/mapbox-token').then(r=>r.json()).catch(()=>({token:''}));
-  if(!token || !token.startsWith('pk.')) { status.textContent='Mapbox token missing or invalid.'; return; }
+  if(!token.startsWith('pk.')){ status.textContent='Mapbox token invalid.'; return; }
 
-  // Map
-  mapboxgl.accessToken = token;
-  map = new mapboxgl.Map({
+  mapboxgl.accessToken=token;
+  map=new mapboxgl.Map({
     container:'map',
     style: MAP_STYLE,
     center:[-98.5,39.8],
     zoom:3.5
   });
   map.addControl(new mapboxgl.NavigationControl(),'top-right');
-  map.on('error', e => { status.textContent = 'Map error: ' + (e?.error?.message || JSON.stringify(e)); });
-  await new Promise(res => map.once('load', res));
-  status.textContent = 'Base map loaded.';
+  await new Promise(res=>map.once('load',res));
+  status.textContent='Map ready.';
 
-  // Year change
-  document.getElementById('year').addEventListener('change', async e => {
-    currentYear = e.target.value;
-    await updateTileset();
-    await loadCounts();
-  });
-
-  // Lender dropdown
-  const dd = document.getElementById('lender');
-  const L = await fetch('/api/maps').then(r=>r.json()).catch(()=>({lenders:[]}));
-  dd.innerHTML = (L.lenders||[]).map(n=>`<option>${n}</option>`).join('');
-  dd.addEventListener('change', loadCounts);
+  const dd=document.getElementById('lender');
+  const L=await fetch('/api/maps').then(r=>r.json()).catch(()=>({lenders:[]}));
+  dd.innerHTML=(L.lenders||[]).map(n=>`<option>${n}</option>`).join('');
+  dd.addEventListener('change',loadCounts);
 
   await updateTileset();
   await loadCounts();
 }
 
 async function updateTileset(){
-  const t = TILESETS[currentYear];
-  const status = document.getElementById('status');
-  if(!t){ status.textContent = `No tileset for ${currentYear}`; return; }
+  const t=TILESETS[currentYear];
+  const status=document.getElementById('status');
+  if(!t){ status.textContent=`No tileset for ${currentYear}`; return; }
 
-  // Remove existing
-  for (const yr in TILESETS){
-    const l = TILESETS[yr];
-    if(map.getLayer(l.id+'-choropleth')) map.removeLayer(l.id+'-choropleth');
-    if(map.getLayer(l.id+'-backdrop')) map.removeLayer(l.id+'-backdrop');
-    if(map.getLayer(l.id+'-outline')) map.removeLayer(l.id+'-outline');
-    if(map.getSource(l.id)) map.removeSource(l.id);
-  }
+  if(map.getSource(t.id)) return;
 
-  // Add source
-  map.addSource(t.id, { type:'vector', url:t.url, promoteId:'GEOID' });
-
-  // Backdrop so tracts are always visible
+  map.addSource(t.id,{type:'vector',url:t.url,promoteId:'GEOID'});
   map.addLayer({
-    id: t.id+'-backdrop',
-    type: 'fill',
-    source: t.id,
-    'source-layer': t.layer,
-    paint:{ 'fill-color':'#ff00ff', 'fill-opacity':0.12 }
+    id:t.id+'-backdrop',
+    type:'fill',
+    source:t.id,
+    'source-layer':t.layer,
+    paint:{'fill-color':'#cccccc','fill-opacity':0.15}
   });
-
-  // Choropleth (only features with value)
   map.addLayer({
-    id: t.id+'-choropleth',
-    type: 'fill',
-    source: t.id,
-    'source-layer': t.layer,
-    paint: choroplethPaint()
+    id:t.id+'-choropleth',
+    type:'fill',
+    source:t.id,
+    'source-layer':t.layer,
+    paint:choroplethPaint()
   });
-
-  // Outline
   map.addLayer({
-    id: t.id+'-outline',
-    type: 'line',
-    source: t.id,
-    'source-layer': t.layer,
-    paint:{ 'line-color':'#000','line-width':0.8,'line-opacity':0.6 }
+    id:t.id+'-outline',
+    type:'line',
+    source:t.id,
+    'source-layer':t.layer,
+    paint:{'line-color':'#000','line-width':0.5,'line-opacity':0.3}
   });
-
   await waitForTiles(t.id);
-  const rendered = map.queryRenderedFeatures({ layers:[t.id+'-backdrop'] }).length;
-  status.textContent = `Tiles ready. Tracts on screen: ${rendered}. Loading counts…`;
-
-  // Click probe (on both layers)
-  map.on('click', t.id+'-backdrop', (e) => {
-    const f = e.features && e.features[0];
-    if (f) alert('feature.id: '+f.id+' (type '+typeof f.id+')\nGEOID prop: '+f.properties?.GEOID);
-  });
-  map.on('click', t.id+'-choropleth', (e) => {
-    const f = e.features && e.features[0];
-    if (f) alert('feature.id: '+f.id+' (type '+typeof f.id+')\nGEOID prop: '+f.properties?.GEOID+'\nvalue(state): '+JSON.stringify(map.getFeatureState({source:t.id, sourceLayer:t.layer, id:f.id})));
-  });
 }
 
 async function loadCounts(){
-  const lender = document.getElementById('lender').value;
-  const status = document.getElementById('status');
-  const t = TILESETS[currentYear];
-  if(!t){ status.textContent = `No tileset for ${currentYear}`; return; }
+  const lender=document.getElementById('lender').value;
+  const status=document.getElementById('status');
+  const t=TILESETS[currentYear];
+  if(!t){ status.textContent=`No tileset for ${currentYear}`; return; }
 
-  // Fetch counts (DB: stfid → GEOID, datayear)
-  const res = await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=${currentYear}`);
-  if(!res.ok){ status.textContent = 'Error: '+(await res.text()); return; }
-  const data = await res.json();
-  const counts = new Map((data.rows||[]).map(r => [String(r.GEOID), r.count]));
+  const res=await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=${currentYear}`);
+  if(!res.ok){ status.textContent='Error: '+(await res.text()); return; }
+  const data=await res.json();
+  const rows=data.rows||[];
+  const counts=new Map(rows.map(r=>[String(r.GEOID),r.count]));
+  status.textContent=`Loaded ${counts.size} tracts. Applying colors…`;
 
-  status.textContent = `Loaded ${counts.size} tracts. Applying colors…`;
   await waitForTiles(t.id);
-
-  // Detect id type from a sample feature (if available)
-  const sample = map.querySourceFeatures(t.id, { sourceLayer: t.layer })[0];
-  const idsAreNumbers = sample && typeof sample.id === 'number';
-
-  // Clear previous states
-  for (const oldId of prevIds) {
-    map.setFeatureState({ source: t.id, sourceLayer: t.layer, id: oldId }, { value: null });
+  // Reset feature states
+  for(const id of prevIds){
+    map.setFeatureState({source:t.id,'sourceLayer':t.layer,id}, {value:null});
   }
   prevIds.clear();
 
-  // Apply new values — cast BOTH ways to be safe (string & number)
-  let applied = 0;
-  for (const [geoidStr, value] of counts.entries()) {
-    const asString = String(geoidStr);
-    const asNumber = Number(geoidStr);
-
-    // primary (based on detected type)
-    const primaryId = idsAreNumbers ? asNumber : asString;
-    map.setFeatureState({ source: t.id, sourceLayer: t.layer, id: primaryId }, { value });
-
-    // secondary (opposite type) — harmless if it doesn't exist
-    const secondaryId = idsAreNumbers ? asString : asNumber;
-    map.setFeatureState({ source: t.id, sourceLayer: t.layer, id: secondaryId }, { value });
-
-    prevIds.add(primaryId);
-    prevIds.add(secondaryId);
+  let applied=0;
+  for(const [geoid,value] of counts.entries()){
+    map.setFeatureState({source:t.id,'sourceLayer':t.layer,id:geoid},{value});
+    prevIds.add(geoid);
     applied++;
   }
 
-  status.textContent = `Colored ${applied} tracts.`;
+  // 🔹 Force a map repaint after all updates
+  map.triggerRepaint();
+  status.textContent=`Colored ${applied} tracts. Click a tract to inspect.`;
+
+  // Click test
+  map.on('click',t.id+'-choropleth',(e)=>{
+    const f=e.features[0];
+    const st=map.getFeatureState({source:t.id,'sourceLayer':t.layer,id:f.id});
+    alert(`GEOID: ${f.properties.GEOID}\nValue(state): ${JSON.stringify(st)}`);
+  });
 }
 
 init();
